fix(45347) - Improve NLC tool layout
ixed busted truncation on class name.

--- a/client/app/training/training.scss
+++ b/client/app/training/training.scss
@@ -314,6 +314,9 @@
 .class-label {
   line-height: 1.9em;
   text-align: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .row {
   margin: .3125em 0 !important;
